--- a/Luscinia/.classpath
+++ b/Luscinia/.classpath
@@ -3,12 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java SE 8 [1.8.0_25]"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/colt.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/h2-1.1.118.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/hsqldb.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/mp3spi1.9.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/mysql-connector-java-3.0.15-ga-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/poi-2.5.1-final-20040804.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/ejml-0.20.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/mdsj.jar"/>
+	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/h2-1.3.176.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
