--- a/Luscinia/.classpath
+++ b/Luscinia/.classpath
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java SE 8 [1.8.0_25]"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/colt.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/hsqldb.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/mp3spi1.9.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/mysql-connector-java-3.0.15-ga-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/poi-2.5.1-final-20040804.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/ejml-0.20.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/mdsj.jar"/>
 	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/h2-1.3.176.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
