--- a/Luscinia/.classpath
+++ b/Luscinia/.classpath
@@ -11,20 +11,22 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/colt.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/hsqldb.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/workspace/mysql-connector-java-3.0.15-ga-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/ejml-0.20.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Rob/Documents/Programming Projects/git/LusciniaRepository/Luscinia/mdsj.jar"/>
-	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/h2-1.3.176.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/colt.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/ejml-0.20.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/h2-1.3.176.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/hsqldb.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/Luscinia/Luscinia/dist/iirj.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/mdsj.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/mysql-connector-java-3.0.15-ga-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/poi-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/poi-ooxml-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/poi-ooxml-schemas-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="/Users/rfl/Documents/workspace/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/poi-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/poi-ooxml-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/xmlbeans-2.6.0.jar"/>
-	<classpathentry kind="lib" path="/Users/Rob/Documents/workspace/poi-ooxml-schemas-3.14-20160307.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
